--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,13 @@
     <color name="color_teal_200">#FF03DAC5</color>
     <color name="color_teal_700">#FF018786</color>
     <color name="color_midnight_blue">#022869</color>
+    <color name="color_royal_blue">#253FE9</color>
     <color name="color_mako">#42464C</color>
+    <color name="color_bombay">#AEB3BC</color>
+    <color name="color_razzle_dazzle_rose">#FB2DBF</color>
+    <color name="color_red_ribbon">#E60521</color>
+    <color name="color_green">#15F014</color>
+    <color name="color_heavy_metal">#2E332E</color>
+    <color name="color_japanese_laurel">#048F04</color>
+
 </resources>
