--- a/app/src/main/res/layout/fragment_home_layout.xml
+++ b/app/src/main/res/layout/fragment_home_layout.xml
@@ -6,7 +6,7 @@
     <data>
 
         <variable
-            name="world"
+            name="worldBinding"
             type="com.example.vaccovid19.data.model.World" />
 
         <variable
@@ -51,6 +51,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:fillViewport="true"
+            android:overScrollMode="never"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -66,79 +67,259 @@
                     android:layout_height="0dp"
                     android:layout_marginHorizontal="@dimen/dp_60"
                     android:layout_marginTop="@dimen/dp_30"
+                    android:visibility="invisible"
                     app:layout_constraintDimensionRatio="H,1:1"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="0dp"
+                <ProgressBar
+                    android:id="@+id/progressHome"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:indeterminateDrawable="@drawable/bg_circle_progress"
+                    app:layout_constraintBottom_toBottomOf="@id/chartWorldData"
+                    app:layout_constraintLeft_toLeftOf="@id/chartWorldData"
+                    app:layout_constraintRight_toRightOf="@id/chartWorldData"
+                    app:layout_constraintTop_toTopOf="@id/chartWorldData" />
+
+                <ImageView
+                    android:id="@+id/imageTotal"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
                     android:layout_marginHorizontal="@dimen/dp_20"
                     android:layout_marginTop="@dimen/dp_30"
                     android:background="@drawable/bg_border_15_heavy_metal"
+                    app:layout_constraintDimensionRatio="2.5:1"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/chartWorldData">
+                    app:layout_constraintTop_toBottomOf="@id/chartWorldData" />
 
-                    <TextView
-                        android:id="@+id/textTotalCase"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/dp_20"
-                        android:layout_marginTop="@dimen/dp_20"
-                        android:text="@string/text_total_case"
-                        android:textColor="@android:color/white"
-                        android:textSize="@dimen/sp_22"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                <TextView
+                    android:id="@+id/textTotalCase"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_20"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:text="@string/text_total_case"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/sp_22"
+                    app:layout_constraintLeft_toLeftOf="@id/imageTotal"
+                    app:layout_constraintTop_toTopOf="@id/imageTotal" />
 
-                    <TextView
-                        android:id="@+id/textNumberCase"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dp_20"
-                        android:layout_marginEnd="@dimen/dp_20"
-                        android:text="@{numberFormat.getNumberFormat(world.totalCase)}"
-                        android:textColor="@color/color_green"
-                        android:textSize="@dimen/sp_22"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/textTotalCase" />
+                <TextView
+                    android:id="@+id/textNumberCase"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:layout_marginEnd="@dimen/dp_20"
+                    android:text="@{numberFormat.getNumberFormat(worldBinding.totalCase)}"
+                    android:textColor="@color/color_green"
+                    android:textSize="@dimen/sp_22"
+                    app:layout_constraintRight_toRightOf="@id/imageTotal"
+                    app:layout_constraintTop_toBottomOf="@id/textTotalCase" />
 
-                    <ImageView
-                        android:layout_width="@dimen/dp_20"
-                        android:layout_height="@dimen/dp_20"
-                        android:layout_marginEnd="@dimen/dp_10"
-                        android:src="@drawable/ic_green_tick"
-                        app:layout_constraintBottom_toBottomOf="@id/textNumberCase"
-                        app:layout_constraintRight_toLeftOf="@id/textNumberCase"
-                        app:layout_constraintTop_toTopOf="@id/textNumberCase" />
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginEnd="@dimen/dp_10"
+                    android:contentDescription="@null"
+                    android:src="@drawable/ic_green_tick"
+                    app:layout_constraintBottom_toBottomOf="@id/textNumberCase"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintRight_toLeftOf="@id/textNumberCase"
+                    app:layout_constraintTop_toTopOf="@id/textNumberCase" />
 
-                    <TextView
-                        android:id="@+id/textNumberIncrease"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dp_15"
-                        android:layout_marginBottom="@dimen/dp_20"
-                        android:text="@{numberFormat.getNumberFormatIncrease(world.newCases)}"
-                        android:textColor="@color/color_japanese_laurel"
-                        android:textSize="@dimen/sp_16"
-                        android:textStyle="italic"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintRight_toRightOf="@id/textNumberCase"
-                        app:layout_constraintTop_toBottomOf="@id/textNumberCase" />
+                <TextView
+                    android:id="@+id/textNumberIncrease"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_15"
+                    android:layout_marginBottom="@dimen/dp_20"
+                    android:text="@{numberFormat.getNumberFormatIncrease(worldBinding.newCases)}"
+                    android:textColor="@color/color_japanese_laurel"
+                    android:textSize="@dimen/sp_16"
+                    android:textStyle="italic"
+                    app:layout_constraintBottom_toBottomOf="@id/imageTotal"
+                    app:layout_constraintRight_toRightOf="@id/textNumberCase"
+                    app:layout_constraintTop_toBottomOf="@id/textNumberCase" />
 
-                    <TextView
-                        android:id="@+id/textDailyIncrease"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/dp_8"
-                        android:text="@string/text_daily_increase"
-                        android:textColor="@android:color/white"
-                        app:layout_constraintBottom_toBottomOf="@id/textNumberIncrease"
-                        app:layout_constraintRight_toLeftOf="@id/textNumberIncrease"
-                        app:layout_constraintTop_toTopOf="@id/textNumberIncrease" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/textDailyIncrease"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/dp_8"
+                    android:text="@string/text_daily_increase"
+                    android:textColor="@android:color/white"
+                    app:layout_constraintBottom_toBottomOf="@id/textNumberIncrease"
+                    app:layout_constraintRight_toLeftOf="@id/textNumberIncrease"
+                    app:layout_constraintTop_toTopOf="@id/textNumberIncrease" />
+
+                <ImageView
+                    android:id="@+id/imageDeath"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/dp_15"
+                    android:layout_marginEnd="@dimen/dp_10"
+                    android:background="@drawable/bg_border_15_heavy_metal"
+                    app:layout_constraintDimensionRatio="3:1.8"
+                    app:layout_constraintLeft_toLeftOf="@id/imageTotal"
+                    app:layout_constraintRight_toLeftOf="@id/imageActive"
+                    app:layout_constraintTop_toBottomOf="@id/imageTotal" />
+
+                <TextView
+                    android:id="@+id/textTotalDeath"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_20"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:text="@string/text_total_death"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/sp_18"
+                    app:layout_constraintLeft_toLeftOf="@id/imageDeath"
+                    app:layout_constraintTop_toTopOf="@id/imageDeath" />
+
+                <TextView
+                    android:id="@+id/textNumberDeath"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/dp_20"
+                    android:layout_marginEnd="@dimen/dp_20"
+                    android:text="@{numberFormat.getNumberFormat(worldBinding.totalDeath)}"
+                    android:textColor="@color/color_red_ribbon"
+                    android:textSize="@dimen/sp_18"
+                    app:layout_constraintBottom_toBottomOf="@id/imageDeath"
+                    app:layout_constraintRight_toRightOf="@id/imageDeath"
+                    app:layout_constraintTop_toBottomOf="@id/textTotalDeath" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginEnd="@dimen/dp_10"
+                    android:contentDescription="@null"
+                    android:src="@drawable/ic_human_skull"
+                    app:layout_constraintBottom_toBottomOf="@id/textNumberDeath"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintRight_toLeftOf="@id/textNumberDeath"
+                    app:layout_constraintTop_toTopOf="@id/textNumberDeath" />
+
+                <ImageView
+                    android:id="@+id/imageActive"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:background="@drawable/bg_border_15_heavy_metal"
+                    app:layout_constraintBottom_toBottomOf="@id/imageDeath"
+                    app:layout_constraintLeft_toRightOf="@id/imageDeath"
+                    app:layout_constraintRight_toRightOf="@id/imageTotal"
+                    app:layout_constraintTop_toTopOf="@id/imageDeath" />
+
+                <TextView
+                    android:id="@+id/textTotalActive"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_20"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:text="@string/text_total_active"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/sp_18"
+                    app:layout_constraintLeft_toLeftOf="@id/imageActive"
+                    app:layout_constraintTop_toTopOf="@id/imageActive" />
+
+                <TextView
+                    android:id="@+id/textNumberActive"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginVertical="@dimen/dp_20"
+                    android:layout_marginEnd="@dimen/dp_20"
+                    android:text="@{numberFormat.getNumberFormat(worldBinding.activeCase)}"
+                    android:textColor="@color/color_razzle_dazzle_rose"
+                    android:textSize="@dimen/sp_18"
+                    app:layout_constraintBottom_toBottomOf="@id/imageActive"
+                    app:layout_constraintRight_toRightOf="@id/imageActive"
+                    app:layout_constraintTop_toBottomOf="@id/textTotalActive" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginEnd="@dimen/dp_10"
+                    android:contentDescription="@null"
+                    android:src="@drawable/ic_people"
+                    app:layout_constraintBottom_toBottomOf="@id/textNumberActive"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintRight_toLeftOf="@id/textNumberActive"
+                    app:layout_constraintTop_toTopOf="@id/textNumberActive" />
+
+                <ImageView
+                    android:id="@+id/imageRecover"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/dp_15"
+                    android:layout_marginBottom="@dimen/dp_20"
+                    android:background="@drawable/bg_border_15_heavy_metal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="2.5:1"
+                    app:layout_constraintLeft_toLeftOf="@id/imageTotal"
+                    app:layout_constraintRight_toRightOf="@id/imageTotal"
+                    app:layout_constraintTop_toBottomOf="@id/imageActive" />
+
+                <TextView
+                    android:id="@+id/textTotalRecover"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/dp_20"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:text="@string/text_total_recovered"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/sp_22"
+                    app:layout_constraintLeft_toLeftOf="@id/imageRecover"
+                    app:layout_constraintTop_toTopOf="@id/imageRecover" />
+
+                <TextView
+                    android:id="@+id/textNumberRecover"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:layout_marginEnd="@dimen/dp_20"
+                    android:text="@{numberFormat.getNumberFormat(worldBinding.totalRecovered)}"
+                    android:textColor="@color/color_royal_blue"
+                    android:textSize="@dimen/sp_22"
+                    app:layout_constraintRight_toRightOf="@id/imageRecover"
+                    app:layout_constraintTop_toBottomOf="@id/textTotalRecover" />
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginEnd="@dimen/dp_10"
+                    android:src="@drawable/ic_health"
+                    app:layout_constraintBottom_toBottomOf="@id/textNumberRecover"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintRight_toLeftOf="@id/textNumberRecover"
+                    app:layout_constraintTop_toTopOf="@id/textNumberRecover" />
+
+                <TextView
+                    android:id="@+id/textRecoverIncrease"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dp_15"
+                    android:layout_marginBottom="@dimen/dp_20"
+                    android:text="@{numberFormat.getNumberFormatIncrease(worldBinding.newRecovered)}"
+                    android:textColor="@color/color_royal_blue"
+                    android:textSize="@dimen/sp_16"
+                    android:textStyle="italic"
+                    app:layout_constraintBottom_toBottomOf="@id/imageRecover"
+                    app:layout_constraintRight_toRightOf="@id/textNumberRecover"
+                    app:layout_constraintTop_toBottomOf="@id/textNumberRecover" />
+
+                <TextView
+                    android:id="@+id/textNewRecover"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/dp_8"
+                    android:text="@string/text_new_recover"
+                    android:textColor="@android:color/white"
+                    app:layout_constraintBottom_toBottomOf="@id/textRecoverIncrease"
+                    app:layout_constraintRight_toLeftOf="@id/textRecoverIncrease"
+                    app:layout_constraintTop_toTopOf="@id/textRecoverIncrease" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
