--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="color_green">#15F014</color>
     <color name="color_heavy_metal">#2E332E</color>
     <color name="color_japanese_laurel">#048F04</color>
+    <color name="color_trout">#494F5B</color>
 
 </resources>
