--- a/app/src/main/res/layout/fragment_home_layout.xml
+++ b/app/src/main/res/layout/fragment_home_layout.xml
@@ -22,11 +22,11 @@
             android:id="@+id/textHomeTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:background="@color/color_bombay"
+            android:background="@color/color_trout"
             android:gravity="center"
             android:paddingVertical="@dimen/dp_15"
             android:text="@string/text_world"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textSize="@dimen/sp_22"
             android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -89,7 +89,7 @@
                     android:layout_height="0dp"
                     android:layout_marginHorizontal="@dimen/dp_20"
                     android:layout_marginTop="@dimen/dp_30"
-                    android:background="@drawable/bg_border_15_heavy_metal"
+                    android:background="@drawable/bg_border_10_heavy_metal"
                     app:layout_constraintDimensionRatio="2.5:1"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -161,7 +161,7 @@
                     android:layout_height="0dp"
                     android:layout_marginTop="@dimen/dp_15"
                     android:layout_marginEnd="@dimen/dp_10"
-                    android:background="@drawable/bg_border_15_heavy_metal"
+                    android:background="@drawable/bg_border_10_heavy_metal"
                     app:layout_constraintDimensionRatio="3:1.8"
                     app:layout_constraintLeft_toLeftOf="@id/imageTotal"
                     app:layout_constraintRight_toLeftOf="@id/imageActive"
@@ -207,7 +207,7 @@
                     android:id="@+id/imageActive"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:background="@drawable/bg_border_15_heavy_metal"
+                    android:background="@drawable/bg_border_10_heavy_metal"
                     app:layout_constraintBottom_toBottomOf="@id/imageDeath"
                     app:layout_constraintLeft_toRightOf="@id/imageDeath"
                     app:layout_constraintRight_toRightOf="@id/imageTotal"
@@ -255,7 +255,7 @@
                     android:layout_height="0dp"
                     android:layout_marginTop="@dimen/dp_15"
                     android:layout_marginBottom="@dimen/dp_20"
-                    android:background="@drawable/bg_border_15_heavy_metal"
+                    android:background="@drawable/bg_border_10_heavy_metal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintDimensionRatio="2.5:1"
                     app:layout_constraintLeft_toLeftOf="@id/imageTotal"
