--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -15,5 +15,26 @@
         android:id="@+id/countryFragment"
         android:name="com.example.vaccovid19.ui.country.CountryFragment"
         android:label="CountryFragment"
-        tools:layout="@layout/fragment_country_layout" />
+        tools:layout="@layout/fragment_country_layout">
+
+        <action
+            android:id="@+id/action_countryFragment_to_detailCountryFragment"
+            app:destination="@id/detailCountryFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/detailCountryFragment"
+        android:name="com.example.vaccovid19.ui.detail.CountryDetailFragment"
+        android:label="DetailCountryFragment"
+        tools:layout="@layout/fragment_detail_country">
+
+        <argument
+            android:name="country"
+            app:argType="com.example.vaccovid19.data.model.Country" />
+    </fragment>
 </navigation>
