--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,13 +7,13 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.example.vaccovid19.ui.home.HomeFragment"
+        android:name="com.sun.vaccovid19.ui.home.HomeFragment"
         android:label="HomeFragment"
         tools:layout="@layout/fragment_home_layout" />
 
     <fragment
         android:id="@+id/countryFragment"
-        android:name="com.example.vaccovid19.ui.country.CountryFragment"
+        android:name="com.sun.vaccovid19.ui.country.CountryFragment"
         android:label="CountryFragment"
         tools:layout="@layout/fragment_country_layout">
 
@@ -29,12 +29,12 @@
 
     <fragment
         android:id="@+id/detailCountryFragment"
-        android:name="com.example.vaccovid19.ui.detail.CountryDetailFragment"
+        android:name="com.sun.vaccovid19.ui.detail.CountryDetailFragment"
         android:label="DetailCountryFragment"
         tools:layout="@layout/fragment_detail_country">
 
         <argument
             android:name="country"
-            app:argType="com.example.vaccovid19.data.model.Country" />
+            app:argType="com.sun.vaccovid19.data.model.Country" />
     </fragment>
 </navigation>
