--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -37,4 +37,9 @@
             android:name="country"
             app:argType="com.sun.vaccovid19.data.model.Country" />
     </fragment>
+
+    <fragment android:id="@+id/vaccineFragment"
+        android:name="com.sun.vaccovid19.ui.vaccine.VaccineFragment"
+        android:label="VaccineFragment"
+        tools:layout="@layout/fragment_vaccine_layout"/>
 </navigation>
