--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,6 @@
     <color name="color_japanese_laurel">#048F04</color>
     <color name="color_trout">#494F5B</color>
     <color name="color_iron">#D0D3D7</color>
+    <color name="color_athen_grey">#F9F9FA</color>
 
 </resources>
